# mmwserial_rs

./: .gitignore  Cargo.toml  README.md  build.sh  pyproject.toml
python/: setup.py
python/mmwserial/: __init__.py  udp.py
src/: lib.rs  reader.rs  types.rs  udp.rs
tests/: test_radar.py  test_udp.py
