[package]
name = "mmwserial"
version = "0.1.0"
edition = "2021"
authors = ["Juergen Hasch"]
description = "Serial interface for TI millimeter wave sensors"

[lib]
name = "mmwserial"
crate-type = ["cdylib", "rlib"]

[dependencies]
serialport = "4.3"
byteorder = "1.5"
thiserror = "1.0"
pyo3 = { version = "0.23.5", features = ["extension-module", "abi3-py38"] }
socket2 = "0.5"

[dev-dependencies]
anyhow = "1.0"
