[build-system]
requires = ["setuptools>=64.0.0", "wheel", "maturin>=1.4.0"]
build-backend = "maturin"

[project]
name = "mmwserial"
version = "0.1.0"
description = "Python interface for mmWave radar serial communication"
authors = [
    {name = "Juergen Hasch", email = "juergen.hasch@elbonia.de"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "mmwserial" 